--- a/.gitignore
+++ b/.gitignore
@@ -1,323 +1,2 @@
-
-.py/gen/prof99.pdf
-.py/gen/prof98.pdf
-.py/gen/prof97.pdf
-.py/gen/prof96.pdf
-.py/gen/prof95.pdf
-.py/gen/prof94.pdf
-.py/gen/prof93.pdf
-.py/gen/prof92.pdf
-.py/gen/prof91.pdf
-.py/gen/prof90.pdf
-.py/gen/prof9.pdf
-.py/gen/prof89.pdf
-.py/gen/prof88.pdf
-.py/gen/prof87.pdf
-.py/gen/prof86.pdf
-.py/gen/prof85.pdf
-.py/gen/prof84.pdf
-.py/gen/prof83.pdf
-.py/gen/prof82.pdf
-.py/gen/prof81.pdf
-.py/gen/prof80.pdf
-.py/gen/prof8.pdf
-.py/gen/prof79.pdf
-.py/gen/prof78.pdf
-.py/gen/prof77.pdf
-.py/gen/prof76.pdf
-.py/gen/prof75.pdf
-.py/gen/prof74.pdf
-.py/gen/prof73.pdf
-.py/gen/prof72.pdf
-.py/gen/prof71.pdf
-.py/gen/prof70.pdf
-.py/gen/prof7.pdf
-.py/gen/prof69.pdf
-.py/gen/prof68.pdf
-.py/gen/prof67.pdf
-.py/gen/prof66.pdf
-.py/gen/prof65.pdf
-.py/gen/prof64.pdf
-.py/gen/prof63.pdf
-.py/gen/prof62.pdf
-.py/gen/prof61.pdf
-.py/gen/prof60.pdf
-.py/gen/prof6.pdf
-.py/gen/prof59.pdf
-.py/gen/prof58.pdf
-.py/gen/prof57.pdf
-.py/gen/prof56.pdf
-.py/gen/prof55.pdf
-.py/gen/prof54.pdf
-.py/gen/prof53.pdf
-.py/gen/prof52.pdf
-.py/gen/prof51.pdf
-.py/gen/prof50.pdf
-.py/gen/prof5.pdf
-.py/gen/prof49.pdf
-.py/gen/prof48.pdf
-.py/gen/prof47.pdf
-.py/gen/prof46.pdf
-.py/gen/prof45.pdf
-.py/gen/prof44.pdf
-.py/gen/prof43.pdf
-.py/gen/prof42.pdf
-.py/gen/prof41.pdf
-.py/gen/prof40.pdf
-.py/gen/prof4.pdf
-.py/gen/prof39.pdf
-.py/gen/prof38.pdf
-.py/gen/prof37.pdf
-.py/gen/prof36.pdf
-.py/gen/prof35.pdf
-.py/gen/prof34.pdf
-.py/gen/prof33.pdf
-.py/gen/prof321.pdf
-.py/gen/prof320.pdf
-.py/gen/prof32.pdf
-.py/gen/prof319.pdf
-.py/gen/prof318.pdf
-.py/gen/prof317.pdf
-.py/gen/prof316.pdf
-.py/gen/prof315.pdf
-.py/gen/prof314.pdf
-.py/gen/prof313.pdf
-.py/gen/prof312.pdf
-.py/gen/prof311.pdf
-.py/gen/prof310.pdf
-.py/gen/prof31.pdf
-.py/gen/prof309.pdf
-.py/gen/prof308.pdf
-.py/gen/prof307.pdf
-.py/gen/prof306.pdf
-.py/gen/prof305.pdf
-.py/gen/prof304.pdf
-.py/gen/prof303.pdf
-.py/gen/prof302.pdf
-.py/gen/prof301.pdf
-.py/gen/prof300.pdf
-.py/gen/prof30.pdf
-.py/gen/prof3.pdf
-.py/gen/prof299.pdf
-.py/gen/prof298.pdf
-.py/gen/prof297.pdf
-.py/gen/prof296.pdf
-.py/gen/prof295.pdf
-.py/gen/prof294.pdf
-.py/gen/prof293.pdf
-.py/gen/prof292.pdf
-.py/gen/prof291.pdf
-.py/gen/prof290.pdf
-.py/gen/prof29.pdf
-.py/gen/prof289.pdf
-.py/gen/prof288.pdf
-.py/gen/prof287.pdf
-.py/gen/prof286.pdf
-.py/gen/prof285.pdf
-.py/gen/prof284.pdf
-.py/gen/prof283.pdf
-.py/gen/prof282.pdf
-.py/gen/prof281.pdf
-.py/gen/prof280.pdf
-.py/gen/prof28.pdf
-.py/gen/prof279.pdf
-.py/gen/prof278.pdf
-.py/gen/prof277.pdf
-.py/gen/prof276.pdf
-.py/gen/prof275.pdf
-.py/gen/prof274.pdf
-.py/gen/prof273.pdf
-.py/gen/prof272.pdf
-.py/gen/prof271.pdf
-.py/gen/prof270.pdf
-.py/gen/prof27.pdf
-.py/gen/prof269.pdf
-.py/gen/prof268.pdf
-.py/gen/prof267.pdf
-.py/gen/prof266.pdf
-.py/gen/prof265.pdf
-.py/gen/prof264.pdf
-.py/gen/prof263.pdf
-.py/gen/prof262.pdf
-.py/gen/prof261.pdf
-.py/gen/prof260.pdf
-.py/gen/prof26.pdf
-.py/gen/prof259.pdf
-.py/gen/prof258.pdf
-.py/gen/prof257.pdf
-.py/gen/prof256.pdf
-.py/gen/prof255.pdf
-.py/gen/prof254.pdf
-.py/gen/prof253.pdf
-.py/gen/prof252.pdf
-.py/gen/prof251.pdf
-.py/gen/prof250.pdf
-.py/gen/prof25.pdf
-.py/gen/prof249.pdf
-.py/gen/prof248.pdf
-.py/gen/prof247.pdf
-.py/gen/prof246.pdf
-.py/gen/prof245.pdf
-.py/gen/prof244.pdf
-.py/gen/prof243.pdf
-.py/gen/prof242.pdf
-.py/gen/prof241.pdf
-.py/gen/prof240.pdf
-.py/gen/prof24.pdf
-.py/gen/prof239.pdf
-.py/gen/prof238.pdf
-.py/gen/prof237.pdf
-.py/gen/prof236.pdf
-.py/gen/prof235.pdf
-.py/gen/prof234.pdf
-.py/gen/prof233.pdf
-.py/gen/prof232.pdf
-.py/gen/prof231.pdf
-.py/gen/prof230.pdf
-.py/gen/prof23.pdf
-.py/gen/prof229.pdf
-.py/gen/prof228.pdf
-.py/gen/prof227.pdf
-.py/gen/prof226.pdf
-.py/gen/prof225.pdf
-.py/gen/prof224.pdf
-.py/gen/prof223.pdf
-.py/gen/prof222.pdf
-.py/gen/prof221.pdf
-.py/gen/prof220.pdf
-.py/gen/prof22.pdf
-.py/gen/prof219.pdf
-.py/gen/prof218.pdf
-.py/gen/prof217.pdf
-.py/gen/prof216.pdf
-.py/gen/prof215.pdf
-.py/gen/prof214.pdf
-.py/gen/prof213.pdf
-.py/gen/prof212.pdf
-.py/gen/prof211.pdf
-.py/gen/prof210.pdf
-.py/gen/prof21.pdf
-.py/gen/prof209.pdf
-.py/gen/prof208.pdf
-.py/gen/prof207.pdf
-.py/gen/prof206.pdf
-.py/gen/prof205.pdf
-.py/gen/prof204.pdf
-.py/gen/prof203.pdf
-.py/gen/prof202.pdf
-.py/gen/prof201.pdf
-.py/gen/prof200.pdf
-.py/gen/prof20.pdf
-.py/gen/prof2.pdf
-.py/gen/prof199.pdf
-.py/gen/prof198.pdf
-.py/gen/prof197.pdf
-.py/gen/prof196.pdf
-.py/gen/prof195.pdf
-.py/gen/prof194.pdf
-.py/gen/prof193.pdf
-.py/gen/prof192.pdf
-.py/gen/prof191.pdf
-.py/gen/prof190.pdf
-.py/gen/prof19.pdf
-.py/gen/prof189.pdf
-.py/gen/prof188.pdf
-.py/gen/prof187.pdf
-.py/gen/prof186.pdf
-.py/gen/prof185.pdf
-.py/gen/prof184.pdf
-.py/gen/prof183.pdf
-.py/gen/prof182.pdf
-.py/gen/prof181.pdf
-.py/gen/prof180.pdf
-.py/gen/prof18.pdf
-.py/gen/prof179.pdf
-.py/gen/prof178.pdf
-.py/gen/prof177.pdf
-.py/gen/prof176.pdf
-.py/gen/prof175.pdf
-.py/gen/prof174.pdf
-.py/gen/prof173.pdf
-.py/gen/prof172.pdf
-.py/gen/prof171.pdf
-.py/gen/prof170.pdf
-.py/gen/prof17.pdf
-.py/gen/prof169.pdf
-.py/gen/prof168.pdf
-.py/gen/prof167.pdf
-.py/gen/prof166.pdf
-.py/gen/prof165.pdf
-.py/gen/prof164.pdf
-.py/gen/prof163.pdf
-.py/gen/prof162.pdf
-.py/gen/prof161.pdf
-.py/gen/prof160.pdf
-.py/gen/prof16.pdf
-.py/gen/prof159.pdf
-.py/gen/prof158.pdf
-.py/gen/prof157.pdf
-.py/gen/prof156.pdf
-.py/gen/prof155.pdf
-.py/gen/prof154.pdf
-.py/gen/prof153.pdf
-.py/gen/prof152.pdf
-.py/gen/prof151.pdf
-.py/gen/prof150.pdf
-.py/gen/prof15.pdf
-.py/gen/prof149.pdf
-.py/gen/prof148.pdf
-.py/gen/prof147.pdf
-.py/gen/prof146.pdf
-.py/gen/prof145.pdf
-.py/gen/prof144.pdf
-.py/gen/prof143.pdf
-.py/gen/prof142.pdf
-.py/gen/prof141.pdf
-.py/gen/prof140.pdf
-.py/gen/prof14.pdf
-.py/gen/prof139.pdf
-.py/gen/prof138.pdf
-.py/gen/prof137.pdf
-.py/gen/prof136.pdf
-.py/gen/prof135.pdf
-.py/gen/prof134.pdf
-.py/gen/prof133.pdf
-.py/gen/prof132.pdf
-.py/gen/prof131.pdf
-.py/gen/prof130.pdf
-.py/gen/prof13.pdf
-.py/gen/prof129.pdf
-.py/gen/prof128.pdf
-.py/gen/prof127.pdf
-.py/gen/prof126.pdf
-.py/gen/prof125.pdf
-.py/gen/prof124.pdf
-.py/gen/prof123.pdf
-.py/gen/prof122.pdf
-.py/gen/prof121.pdf
-.py/gen/prof120.pdf
-.py/gen/prof12.pdf
-.py/gen/prof119.pdf
-.py/gen/prof118.pdf
-.py/gen/prof117.pdf
-.py/gen/prof116.pdf
-.py/gen/prof115.pdf
-.py/gen/prof114.pdf
-.py/gen/prof113.pdf
-.py/gen/prof112.pdf
-.py/gen/prof111.pdf
-.py/gen/prof110.pdf
-.py/gen/prof11.pdf
-.py/gen/prof109.pdf
-.py/gen/prof108.pdf
-.py/gen/prof107.pdf
-.py/gen/prof106.pdf
-.py/gen/prof105.pdf
-.py/gen/prof104.pdf
-.py/gen/prof103.pdf
-.py/gen/prof102.pdf
-.py/gen/prof101.pdf
-.py/gen/prof100.pdf
-.py/gen/prof10.pdf
-.py/gen/prof1.pdf
-*.pdf
+.py
+exocorriges.com
