--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 .py
 exocorriges.com
+py/nathan/9782091317113/.DS_Store
+py/nathan/.DS_Store
+py/.DS_Store
+.DS_Store
+py/.DS_Store
+py/nathan/.DS_Store
